# Assignment-1-End-to-End-Testing-Strategy-and-Implementation

./: .gitignore  README.md  Software Quality OLA 1.docx  main.py  pyproject.toml
.github/workflows/: python-tests.yml
src/controllers/: list_controller.py  task_controller.py
src/db/: db_connection.py
src/models/: list_task.py  task.py
src/views/: console.py
tests/: test_controllers.py
