[project]
name = "ola-1"
version = "0.1.0"
description = "Assignment 1 for software quality"
authors = [{name = "Natasja Vitoft",email = "cph-nn194@stud.ek.dk"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

